--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">AppWeather</string>
+    <string name="main_error_server">Error en el server</string>
+    <string name="main_current_weather_title">Weather Current:</string>
+    <string name="main_forecast_weather_title">Weather Forecast:</string>
+
+    <string name="weather_temp" >%.2f°C</string>
+    <string name="weather_dt" >Hour: %s</string>
+    <string name="weather_humidity" >Humidity: %d%%</string>
+    <string name="weather_pop" >Pop: %.1f%</string>
 </resources>
